--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
@@ -47,7 +52,11 @@
         <div id="homebox" class="grid-container">
           <div id="grid-item" class="grid-item">
             <h2>Flat Is Fact</h2>
-            <img id="earthphoto" src="earthphoto.jpg" />
+            <img
+              id="earthphoto"
+              src="earthphoto.jpg"
+              alt="https://pic1.zhimg.com/v2-43794b1cedea4fe71d9059db59662460_720w.jpg?source=172ae18b"
+            />
             <form id="flatreadbutton" action="flatEarth.html">
               <input id="flatreadbutton" type="submit" value="Read Article" />
             </form>
@@ -65,7 +74,7 @@
             <form id="titanicbutton" action="titanic.html">
               <input id="titanicbutton" type="submit" value="Read Article" />
             </form>
-          </div>  
+          </div>
           <div id="grid-item" class="grid-item">
             <h2>birds</h2>
             <img id="birdfishjpg" src="birdfish.jpg" />
@@ -86,16 +95,12 @@
             <form id="animalbutton" action="titanic.html">
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
-          </div>  
+          </div>
           <div id="grid-item" class="grid-item">
             Drugs give you are the good for you
           </div>
-          <div id="grid-item" class="grid-item">
-            Electricity isnt real
-          </div>
-          <div id="grid-item" class="grid-item">
-            9/11 didnt happen
-          </div>
+          <div id="grid-item" class="grid-item">Electricity isnt real</div>
+          <div id="grid-item" class="grid-item">9/11 didnt happen</div>
         </div>
       </div>
     </div>
