link didnt work, going back to old version

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
               <input id="flatreadbutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <form id="vaccinebutton" action="vaccine.html">
-            <div class="card">
-              <h2>Do Vaccines Control You?</h2>
-              <img id="vaccineBrain" src="vaccineBrain.jpg" />
-            </div>
-          </form>
+          <div class="card">
+            <h2>Do Vaccines Control You?</h2>
+            <img id="vaccineBrain" src="vaccineBrain.jpg" />
+            <form id="vaccinebutton" action="vaccine.html">
+              <input id="vaccinebutton" type="submit" value="Read Article" />
+            </form>
+          </div>
           <div class="card">
             <h2>Did the Titanic Really Ever Sink?</h2>
             <img id="titanicjpg" src="titanic.jpg" />
