added some pages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="facts.html">Featured</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="submit.html">Submit a Truth</a></li>
         <li class="right">
           <a href="about.html">About</a>
         </li>
