--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <script
-      type="text/javascript"
-      src="//pl17905807.highperformancecpmgate.com/32/e9/72/32e9726a846290f690532396b4528a4d.js"
-    ></script>
     <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RealFacts: Home</title>
     <link rel="stylesheet" href="index.css" />
+    <script
+      type="text/javascript"
+      src="//pl17905836.highperformancecpmgate.com/84/99/c0/8499c0d9c8c6f94d84e2003a9b68505c.js"
+    ></script>
   </head>
   <body>
+    <div id="container-ff316a7777becf2f6c4e06a4a86b3a02"></div>
     <div class="container">
       <ul id="topnav" class="topnav">
         <li><a class="active" href="index.html">Home</a></li>
