--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
     ></script>
     <!-- End Cloudflare Web Analytics -->
+    <script src="script.js"></script>
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
@@ -19,11 +20,10 @@
     <link rel="stylesheet" href="index.css" />
     <script
       type="text/javascript"
-      src="//pl17905836.highperformancecpmgate.com/84/99/c0/8499c0d9c8c6f94d84e2003a9b68505c.js"
+      src="//recompensecombinedlooks.com/84/99/c0/8499c0d9c8c6f94d84e2003a9b68505c.js"
     ></script>
   </head>
   <body>
-    <div id="container-ff316a7777becf2f6c4e06a4a86b3a02"></div>
     <div class="container">
       <ul id="topnav" class="topnav">
         <li><a class="active" href="index.html">Home</a></li>
