--- a/about.html
+++ b/about.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
@@ -26,7 +31,12 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <span>
                 <a href="index.html">
-                  <img id="logo" class="img-responsive" src="logo.png" />
+                  <img
+                    id="logo"
+                    class="img-responsive"
+                    src="logo.png"
+                    alt="Logo"
+                  />
                 </a>
               </span>
               <ul class="navbar-nav">
@@ -42,13 +52,27 @@
                     >Featured</a
                   >
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
-                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
+                    <a class="dropdown-item" href="flatEarth.html"
+                      >The Earth is Flat!</a
+                    >
+                    <a class="dropdown-item" href="birds.html"
+                      >Birds Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="titanic.html"
+                      >The Titanic Never Sank!</a
+                    >
+                    <a class="dropdown-item" href="bees.html"
+                      >Bees Arent Real!</a
+                    >
+                    <a class="dropdown-item" href="vaccine.html"
+                      >Vaccine = Mind Control!</a
+                    >
+                    <a class="dropdown-item" href="math.html"
+                      >Math Isn't Real!</a
+                    >
+                    <a class="dropdown-item" href="animals.html"
+                      >Animals Aren't Real!</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
