--- a/index.html
+++ b/index.html
@@ -25,6 +25,37 @@
   </head>
   <body>
     <div class="container">
+      <div>
+        <nav class="navbar">
+          <!-- LOGO -->
+          <div class="logo"><img id="logo" src="logo.png" alt="LOGO"></div>
+          <!-- NAVIGATION MENU -->
+          <ul class="nav-links">
+            <!-- USING CHECKBOX HACK -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+              <li><a href="/">Home</a></li>
+              <li><a href="/">About</a></li>
+              <li class="services">
+                <a href="/">Services</a>
+                <!-- DROPDOWN MENU -->
+                <ul class="dropdown">
+                  <li><a href="file://C:/">Dropdown 1 </a></li>
+                  <li><a href="/">Dropdown 2</a></li>
+                  <li><a href="/">Dropdown 2</a></li>
+                  <li><a href="/">Dropdown 3</a></li>
+                  <li><a href="/">Dropdown 4</a></li>
+                </ul>
+              </li>
+              <li><a href="/">Pricing</a></li>
+              <li><a href="/">Contact</a></li>
+            </div>
+          </ul>
+        </nav>
+      </div>
+      <!--
       <ul id="topnav" class="topnav">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="facts.html">Featured</a></li>
@@ -33,7 +64,7 @@
         <li class="right">
           <a href="about.html">About</a>
         </li>
-      </ul>
+      </ul> -->
       <!-- end menu row -->
       <!--
         <div class="dropdown-menu">
