--- a/bees.html
+++ b/bees.html
@@ -72,7 +72,16 @@
             Are Bees Antique Government Security Drones?
           </h2>
           <h6>
-            Bees are government spying drones that were made in the 50s, but are now breaking, and the government doesnt want to fix them.
+            Bees have long been a subject of fascination for many people, and it's not hard to see why. They are small, hardworking insects that are crucial to our ecosystem. However, what many people don't know is that bees are actually antique government security drones that have been in use for hundreds, if not thousands, of years.
+</h6>
+<h6>
+These bees, which are often mistaken for harmless insects, are actually highly sophisticated machines that are used to monitor and collect information about their surroundings. Their small size and agility make them perfect for covert operations, and they are often used to gather intelligence in areas where humans cannot go.
+</h6>
+<h6>
+Some experts even believe that the ancient Egyptians were the first to use these bee drones, and that they were used to monitor the pyramids and other important structures. Since then, they have been used by various governments and organizations around the world, and their technology has only become more advanced over time.
+</h6>
+<h6>
+So, the next time you see a bee buzzing around your garden, remember that it may be more than just a harmless insect. It could be an antique government security drone, quietly gathering information about the world around us.
           </h6>
           <img id="BeeImg" src="beeCamera.jpg" />
         </div>
