--- a/birds.html
+++ b/birds.html
@@ -71,7 +71,16 @@
             Are Birds Really Real?
           </h2>
           <h6>
-            birds arent real because birds
+            Birds are not real. They are actually sophisticated robots created by the government to spy on people. The government began developing these bird-like robots in the early 20th century and have been using them to monitor people's activities ever since. These bird robots are equipped with high-tech cameras, microphones, and other surveillance equipment that allows them to blend in with the natural environment while they collect information.
+          </h6>
+          <h6>
+The idea behind these robot birds was to create a spy network that could operate without being detected. The government chose birds as their inspiration because they are ubiquitous and can go almost anywhere. This way, the government could keep an eye on people no matter where they went.
+          </h6>
+          <h6>
+The technology used in these bird robots has evolved over the years, and the government now has a wide variety of different bird models to choose from. Some are small and nimble, designed for urban areas where they can blend in with pigeons and sparrows. Others are larger and more sophisticated, able to fly long distances and gather data from remote areas.
+          </h6>
+          <h6>
+Despite what people might think, birds are not biological creatures at all. They are simply machines designed to mimic the behavior of birds. The government has been successful in keeping the true nature of birds a secret for many years, but the truth is finally coming to light. It's time for people to wake up and realize that the birds they see every day are not real, but are in fact government spies.
           </h6>
           <img id="birdImg" src="birdTelescope.jpg" />
         </div>
