messed with navbar again

--- a/index.html
+++ b/index.html
@@ -18,61 +18,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RealFacts: Home</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <div class="topnav" id="myTopnav">
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
+      <a href="flatEarth.html">Top Article</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
     <div class="container">
-      <div>
-        <nav class="navbar">
-          <!-- LOGO -->
-          <div class="logo"><img id="logo" src="logo.png" alt="LOGO"></div>
-          <!-- NAVIGATION MENU -->
-          <ul class="nav-links">
-            <!-- USING CHECKBOX HACK -->
-            <input type="checkbox" id="checkbox_toggle" />
-            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-            <!-- NAVIGATION MENUS -->
-            <div class="menu">
-              <li><a href="/">Home</a></li>
-              <li><a href="/">About</a></li>
-              <li class="services">
-                <a href="/">Services</a>
-                <!-- DROPDOWN MENU -->
-                <ul class="dropdown">
-                  <li><a href="file://C:/">Dropdown 1 </a></li>
-                  <li><a href="/">Dropdown 2</a></li>
-                  <li><a href="/">Dropdown 2</a></li>
-                  <li><a href="/">Dropdown 3</a></li>
-                  <li><a href="/">Dropdown 4</a></li>
-                </ul>
-              </li>
-              <li><a href="/">Pricing</a></li>
-              <li><a href="/">Contact</a></li>
-            </div>
-          </ul>
-        </nav>
-      </div>
-      <!--
-      <ul id="topnav" class="topnav">
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="facts.html">Featured</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="submit.html">Submit a Truth</a></li>
-        <li class="right">
-          <a href="about.html">About</a>
-        </li>
-      </ul> -->
-      <!-- end menu row -->
-      <!--
-        <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
-                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
-                  </div>
-      -->
       <div id="menu-row" class="row">
         <div id="box">
           <h1 id="featured">Featured</h1>
