--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
           </div>
           <div class="card">Drugs give you are the good for you</div>
           <div class="card">Electricity isnt real</div>
-          <div class="card">9/11 didnt happen</div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+          <div class="card">Australia isn't real</div>
+          <div class="card">The moon landing was faked</div>
+          <div class="card">Bigfoot is real</div>
+          <div class="card">The illuminati is real</div>
         </div>
       </div>
     </div>
