--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               src="bat.png"
               alt="Picture of a fake bat because animals are'nt real"
             />
-            <form action="titanic.html">
+            <form action="animals.html">
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
           </div>
