--- a/animals.html
+++ b/animals.html
@@ -72,7 +72,19 @@
             Animals Are'nt Real!
           </h2>
           <h6>
-            Animals Are'nt real!
+            Animals, as we know them, might not be real. There is a theory that claims that animals are actually sophisticated robots created by an advanced civilization millions of years ago. According to this theory, the animals we see today are just the latest models in a long line of highly advanced robots that have been developed and refined over the ages.
+          </h6>
+          <h6>
+            The evidence for this theory is compelling. For one thing, animals are incredibly complex and sophisticated machines. They have highly specialized body parts and systems that are perfectly adapted to their environment. From the incredible speed of cheetahs to the incredible camouflage of chameleons, it seems like every animal has been engineered for a specific purpose.
+          </h6>
+          <h6>
+            Another piece of evidence for this theory is the fact that animals never seem to evolve or change in any meaningful way. Despite millions of years of environmental pressures and genetic mutations, animals always seem to stay the same. This is because they are already perfectly adapted to their environment and there is no need for further changes.
+          </h6>
+          <h6>
+            Finally, there are reports of strange, animal-like machines being seen in remote locations around the world. These machines are said to be incredibly advanced and are capable of feats that would be impossible for any living creature.
+          </h6>
+          <h6>
+            Of course, there are some who dispute this theory. They argue that animals are real, living creatures that have evolved over millions of years. However, the evidence for this theory is far from conclusive, and it seems likely that the truth about animals may be stranger than we ever imagined.
           </h6>
           <img id="bat" src="bat.png" />
         </div>
