--- a/birds.html
+++ b/birds.html
@@ -17,54 +17,16 @@
     <link rel="stylesheet" href="birds.css" />
   </head>
   <body>
+    <div class="topnav" id="myTopnav">
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
+      <a href="flatEarth.html">Top Article</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-4" id="logo"></div>
-      </div>
-      <!-- end logo row -->
-      <div class="row">
-        <div class="col-sm-12" id="menu">
-          <nav class="navbar navbar-expand-sm bg-info navbar-light">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <span>
-                <a href="index.html">
-                  <img id="logo" class="img-responsive" src="logo.png" />
-                </a>
-              </span>
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbardrop"
-                    data-toggle="dropdown"
-                    >Featured</a
-                  >
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="flatEarth.html">The Earth is Flat!</a>
-                    <a class="dropdown-item" href="birds.html">Birds Arent Real!</a>
-                    <a class="dropdown-item" href="titanic.html">The Titanic Never Sank!</a>
-                    <a class="dropdown-item" href="bees.html">Bees Arent Real!</a>
-                    <a class="dropdown-item" href="vaccine.html">Vaccine = Mind Control!</a>
-                    <a class="dropdown-item" href="math.html">Math Isn't Real!</a>
-                    <a class="dropdown-item" href="animals.html">Animals Aren't Real!</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="facts.html">Facts</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
-      <!-- end menu row -->
       <div class="row">
         <div class="col-sm-12" id="birdbox">
           <h2>
