added styles to html files

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     ></script>
     <!-- End Cloudflare Web Analytics -->
     <link rel="stylesheet" href="bootstrap.min.css" />
+    <link rel="stylesheet" href="style.css">
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <link rel="icon" href="logo.png" />
