--- a/animals.html
+++ b/animals.html
@@ -9,6 +9,7 @@
     />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
