--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     ></script>
     <!-- End Cloudflare Web Analytics -->
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
