--- a/titanic.html
+++ b/titanic.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="bootstrap.min.css" />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
