--- a/flatEarth.html
+++ b/flatEarth.html
@@ -17,7 +17,7 @@
     <title>RealFacts: Flat Earth</title>
     <link rel="stylesheet" href="flatEarth.css" />
   </head>
-  <body>
+  <body><div class="container"></div>
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
@@ -27,7 +27,7 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
-    <div class="container">
+    
       <div class="row">
         <div class="col-sm-12" id="flatbox">
           <h1>Flat Is Fact</h1>
