--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
+      <!--<a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>-->
       <a href="flatEarth.html">Top Article</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
