--- a/flatEarth.html
+++ b/flatEarth.html
@@ -70,7 +70,7 @@
             flat.
           </h6>
           <div>
-            <a id="link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            <a id="link" href="https://www.youtube.com/watch?v=xvFZjo5PgG0"
               >NASA admitting</a
             >
           </div>
