replaced some articles with ai

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <!--<a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>-->
       <a href="flatEarth.html">Top Article</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -38,7 +37,7 @@
         </div>
         <div class="cards">
           <div class="card">
-            <h2>Flat Is Fact</h2>
+            <h2>The Flat Earth: Unveiling the Greatest Cover-Up in History</h2>
             <img
               id="earthphoto"
               src="earthphoto.jpg"
@@ -49,10 +48,10 @@
             </form>
           </div>
           <div class="card">
-            <h2>Do Vaccines Control You?</h2>
+            <h2>Exotic Vaccine Technology: A Dystopian Reality</h2>
             <img
               id="vaccineBrain"
-              src="vaccineBrain.jpg"
+              src="vaccineBrain.png"
               alt="Image Showing a representation of what vaccines do to you"
             />
             <form action="vaccine.html">
@@ -95,7 +94,17 @@
               <input id="animalbutton" type="submit" value="Read Article" />
             </form>
           </div>
-          <div class="card">Drugs give you are the good for you</div>
+          <div class="card">
+            <h2>Using Science to Find Obama's Last Name</h2>
+            <img
+              id="obamajpg"
+              src="obama.jpg"
+              alt="Picture of a fake bat because animals are'nt real"
+            />
+            <form action="obama.html">
+              <input id="animalbutton" type="submit" value="Read Article" />
+            </form>
+          </div>
           <div class="card">Electricity isnt real</div>
           <div class="card">Australia isn't real</div>
           <div class="card">The moon landing was faked</div>
