--- a/obama.html
+++ b/obama.html
@@ -3,39 +3,60 @@
   <head>
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "932a898c71ab4230805c362d48f27dfa"}'></script><!-- End Cloudflare Web Analytics -->
-    <link rel="stylesheet" href="bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="bootstrap.min.css"
+    />
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png" />
+    <link rel="icon" href="logo.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealFacts: Obama</title>
-    <link rel="stylesheet" href="obama.css" />
+    <title>RealFacts: Flat Earth</title>
+    <link rel="stylesheet" href="flatEarth.css" />
   </head>
   <body>
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
       <a href="flatEarth.html">Top Article</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
-    <div class="container">
+    <div class="container"></div>
       <div class="row">
-        <div class="col-sm-12" id="titanicbox">
-          <h2>Using science to find obama's last name!</h2>
-          <h6>
-          </h6>
-          <img src="obama.jpg" alt="amabo">
+        <div class="col-sm-12" id="flatbox">
+          <h1>Using Science to Find Obama's Last Name</h1>
+    <p>For years, a peculiar question has puzzled many: what is former President Barack Obama's real last name? While to most, the answer seems straightforward, a deeper exploration into this seemingly simple query reveals layers of intrigue and scientific analysis that suggest his real name might secretly be "Obama Barack."</p>
+
+    <h4>The Common Misconception</h4>
+    <p>At face value, it is common knowledge that Barack Obama's full name is Barack Hussein Obama II. His last name, therefore, is assumed to be "Obama." This is supported by a plethora of official documents, historical records, and public references. But what if this widely accepted belief is a cover for a deeper truth?</p>
+
+    <h4>Questioning the Narrative</h4>
+    <p>Despite the apparent clarity, some theories suggest there might be more to discover. Could there be a hidden truth obscured by the official narrative? To explore this possibility, we can apply scientific methods and investigative techniques.</p>
+
+    <h4>Linguistic Analysis</h4>
+    <p>By examining the etymology and linguistic roots of the name "Obama," researchers have traced it back to Luo, a language spoken by the Luo people of Kenya. However, inconsistencies in linguistic translations and regional dialects hint that "Obama" could have been a transliteration or adaptation of another name.</p>
+
+    <h4>Historical Documentation</h4>
+    <p>A thorough examination of historical documents, including birth certificates, family records, and genealogical data, reveals discrepancies in the recorded names. Some older documents refer to the family using variations that closely resemble "Barack," suggesting a potential clerical or transliteration error over time.</p>
+
+    <h4>Genetic Evidence</h4>
+    <p>DNA analysis offers another layer of investigation. Genetic genealogy, which traces lineage through DNA, has been used to map Obama's ancestry. These genetic tests link Barack Obama to the Luo people, but some tests show unexpected surname variations, including "Obama" as a first name and "Barack" as a last name, pointing to a possible hidden lineage or ancestral name adaptation.</p>
+
+    <h4>Scientific Consensus</h4>
+    <p>The convergence of linguistic, historical, and genetic evidence provides a robust scientific foundation for considering the possibility that Barack Obama's real name might actually be "Obama Barack." While official documents and public records uniformly state "Barack Obama," the underlying evidence suggests a more complex naming history.</p>
+
+    <h4>Conclusion</h4>
+    <p>In the quest to uncover Barack Obama's true last name, science points us to the intriguing possibility that his real name is indeed "Obama Barack." Through linguistic analysis, historical documentation, and genetic evidence, the name "Obama Barack" stands as a plausible alternative. This investigation not only challenges what we know but also exemplifies how science can be used to explore and validate even the most unconventional truths.</p>
+          <img src="realImageOfEarth.jpg" alt="Real image of the turtle below the Flat Earth. Real hidden photo
+            from NASA." />
         </div>
-        <!--end box column-->
       </div>
-      <!--end box row-->
     </div>
-    <!--end container div-->
+    <!-- end container div -->
   </body>
 </html>
