--- a/vaccine.html
+++ b/vaccine.html
@@ -21,7 +21,6 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
       <a href="flatEarth.html">Top Article</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -30,76 +29,28 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="vaccinebox">
-          <h2>
-            Do covid vaccines contain nanoparticles that self-assemble to build
-            a biocircuitry "operating system" to control your moods and
-            thoughts?
-          </h2>
-          <h6>
-            Some covid vaccines contain exotic technology that, once injected
-            into the body, activates a self-assembly process to build a
-            biocircuitry interface using elements from the victim's own blood.
-            This sounds like science fiction, but we are living in a dystopian
-            sci-fi world with biological weapons, magnetic nanoparticle
-            magnetofection technology, Orwellian surveillance and all-out
-            government propaganda to coerce everyone into taking a depopulation
-            spike protein injection.
-          </h6>
-          <h6>
-            In addition, the Moderna company openly describes their vaccine
-            injections as installing an "operating system," which by definition
-            means a platform to receive additional commands or instructions for
-            execution. How are those commands received? From external
-            electromagnetic waves?
-          </h6>
-          <h6>
-            Dr. Peter McCullogh has described vaccine-pushing doctors as being
-            in a kind of mind-controlled trance. His exact words from a recent
-            interview: What we have learned over time is that we could no longer
-            communicate with government agencies. We actually couldn’t
-            communicate with our propagandized colleagues in major medical
-            centers, all of which appear to be under a spell, almost as if
-            they’ve been hypnotized... Good doctors are doing unthinkable things
-            like injecting biologically active messenger RNA that produces this
-            pathogenic spike protein into pregnant women. I think when these
-            doctors wake up from their trance, they’re going to be shocked to
-            think what they’ve done to people... There’s a video where he states
-            this: It isn't a spell or a trance but rather a self-assembled,
-            embedded biocircuit that has taken control over their neurology!
-          </h6>
-          <h6>
-            Some vaccines are simple spike protein bioweapons injections, but
-            other vaccines are designed to place people in a kind of "trance"
-            where elements of their neurology are controlled through external
-            signals and commands. Never forget this published research:
-            Superparamagnetic nanoparticle delivery of DNA vaccine. The
-            efficiency of delivery of DNA vaccines is often relatively low
-            compared to protein vaccines. The use of superparamagnetic iron
-            oxide nanoparticles (SPIONs) to deliver genes via magnetofection
-            shows promise in improving the efficiency of gene delivery both in
-            vitro and in vivo. That same study reveals the only two elements
-            necessary to create "SPIONS" (magnetic nanoparticles) are Iron and
-            Oxygen, both present in human blood: We describe the production of
-            Fe3O4-based SPIONs with high magnetization values (70 emu/g) under
-            15 kOe of the applied magnetic field at room temperature...
-          </h6>
-          <h6>
-            Polyethylenimine was chosen to modify the surface of SPIONs to
-            assist the delivery of plasmid DNA into mammalian cells due to the
-            polymer's extensive buffering capacity through the "proton sponge"
-            effect. This is the same as a self-assembling nanotech biocircuitry
-            system, it hints at the existence of exotic technologies that are
-            exploring such approaches to controlling neurology via external
-            influences (such as electromagnetic fields). Such technology exists
-            and is being deployed right now, it explains the seeming "hypnosis"
-            or "trance" under which millions of people suffer as they continue
-            to demand more bioweapons injections into children and pregnant
-            women. Today's doctors are just brainwashed, gullible cowards who
-            care nothing if they harm or kill billions of people as long as they
-            don't lose their lucrative medical salaries. Will people ever wake
-            up from this trance and realize they've become vaccine murderers?
-          </h6>
-          <img id="teenVaccines" src="teenVaccines.jpg" />
+          <h1>Exotic Vaccine Technology: A Dystopian Reality</h1>
+    <p>As the world grapples with the COVID-19 pandemic, a new and disturbing narrative has emerged surrounding the technology behind some vaccines. This narrative suggests that certain COVID-19 vaccines contain exotic technology that activates a self-assembly process within the body, building a biocircuitry interface using elements from the recipient's own blood. This scenario sounds like science fiction, but many believe we are living in a dystopian reality where such technologies are not only possible but are being deployed.</p>
+
+    <h4>The "Operating System" of Moderna Vaccines</h4>
+    <p>The Moderna company has openly described their mRNA vaccine injections as installing an "operating system." By definition, an operating system is a platform designed to receive additional commands or instructions. This raises the question: How are these commands received? Some speculate that external electromagnetic waves could be used to interface with this "operating system," influencing the body in ways we are only beginning to understand.</p>
+
+    <h4>Dr. Peter McCullough's Revelations</h4>
+    <p>Dr. Peter McCullough has been vocal about his concerns regarding the COVID-19 vaccines. He has described vaccine-pushing doctors as being in a kind of mind-controlled trance. In a recent interview, he stated: <span class="quote">"What we have learned over time is that we could no longer communicate with government agencies. We actually couldn’t communicate with our propagandized colleagues in major medical centers, all of which appear to be under a spell, almost as if they’ve been hypnotized... Good doctors are doing unthinkable things like injecting biologically active messenger RNA that produces this pathogenic spike protein into pregnant women. I think when these doctors wake up from their trance, they’re going to be shocked to think what they’ve done to people..."</span></p>
+    <p>There is even a video where he suggests that this is not just a spell or a trance but rather a self-assembled, embedded biocircuit that has taken control over their neurology.</p>
+
+    <h4>The Role of SPIONs and Magnetofection</h4>
+    <p>Research into Superparamagnetic Iron Oxide Nanoparticles (SPIONs) has revealed their potential in the delivery of DNA vaccines. SPIONs are created from iron and oxygen, elements naturally present in human blood. A study described the production of Fe3O4-based SPIONs with high magnetization values, which could be used to deliver genes via a process known as magnetofection. This process hints at the existence of self-assembling nanotech biocircuitry systems capable of influencing human neurology through external electromagnetic fields.</p>
+
+    <h4>The Hypnotic Trance Theory</h4>
+    <p>Some vaccines, it is theorized, are designed not just to deliver spike proteins but to place individuals in a state where their neurology can be controlled through external signals and commands. This could explain the seemingly "hypnotized" state of millions who continue to demand more vaccinations despite growing concerns and evidence of adverse effects.</p>
+
+    <h4>The Ethical Dilemma of Modern Medicine</h4>
+    <p>Today's medical professionals are facing unprecedented ethical challenges. Many doctors, perhaps unwittingly, are administering these vaccines without fully understanding the long-term implications. As the world slowly awakens to the reality of this exotic vaccine technology, the medical community will need to confront the ethical ramifications of their actions.</p>
+
+    <h4>Conclusion</h4>
+    <p>In a world where science fiction seems to blend seamlessly with reality, the potential for exotic vaccine technology to control and influence human biology is a chilling prospect. As we delve deeper into the implications of such technology, it becomes clear that we must remain vigilant and informed. The true impact of these technologies on society and individual autonomy remains to be seen.</p>
+          <img id="teenVaccines" src="teenVaccines.jpg" alt="vaccines"/>
         </div>
       </div>
     </div>
