--- a/flatEarth.html
+++ b/flatEarth.html
@@ -21,7 +21,6 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
-      <a href="https://www.youtube.com/watch?v=YxI9nzI1QXQ">Best Video Ever</a>
       <a href="flatEarth.html">Top Article</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -30,41 +29,34 @@
     <div class="container"></div>
       <div class="row">
         <div class="col-sm-12" id="flatbox">
-          <h1>Flat Is Fact</h1>
-          <h3>The Earth is Flat</h3>
-          <h5>
-            According to the globe model (which I point out to you is just a
-            model), the Earth pulls things down and causes them to accelerate at
-            9.8m/s². The Earth also rotates. But we know that rotating objects
-            will push things outwards due to centrifugal force. For example, if
-            you were to take a basketball, put water on it, and then spin it,
-            the water will move outwards. This is the same force you feel when a
-            car moves in a circle.
-          </h5>
-          <h5>
-            So if the Earth is spinning, it should exert a force that causes
-            things to accelerate outwards. Now here’s a question: do you feel
-            the Earth spinning right now? Unless you’ve spun around yourself,
-            you don’t. Since you don’t feel the Earth rotating, that means it
-            cannot be rotating. A common counterargument is that you can only
-            feel motion if you accelerate. The problem with that counterargument
-            is that it neglects that a rotation is an acceleration — an inwards
-            acceleration. So clearly, something isn’t adding up here. Not only
-            that, you can do the math to prove that under the spinning model,
-            objects cannot fall at 9.8m/s² To calculate the centrifugal force,
-            we use F =mv²/r. The force of gravity is F=mg. So the net force
-            would be F = mg-mv²/r = m(g — v²)/r. To calculate the centrifugal
-            acceleration, we use a = v²/r = (460m/s ^2)/(6,371,000m) = 0.033m/s²
-          </h5>
-          <h5>
-            This means that the outward centrifugal acceleration of objects is
-            0.033m/s² The downward acceleration of objects due to gravity alone
-            is 9.8m/s² This means that the total acceleration of an object is
-            9.8m/s² minus 0.033m/s² = 9.767 m/s². This means objects fall down
-            at 9.767m/s² NOT 9.8m/s². In actual experiments, the acceleration of
-            objects measured is 9.8m/s². Therefore, the centrifugal acceleration
-            measured is zero, meaning that the Earth DOES NOT spin.
-          </h5>
+          <h1>The Flat Earth: Unveiling the Greatest Cover-Up in History</h1>
+    <p>For centuries, humanity has been led to believe that the Earth is a spinning globe, hurtling through space at unimaginable speeds. This belief, deeply ingrained in our collective consciousness, has shaped our understanding of the universe and our place within it. But what if this widely accepted notion is, in fact, one of the greatest deceptions ever perpetrated? What if the Earth is actually flat?</p>
+
+    <h4>The Origins of the Globe Theory</h4>
+    <p>The idea that the Earth is a sphere dates back to ancient Greece, with figures like Pythagoras and Aristotle advocating for a round Earth. This concept was further solidified by explorers like Ferdinand Magellan and Nicolaus Copernicus during the Renaissance. However, it's crucial to understand that these early proponents of the globe theory were working with limited technology and knowledge.</p>
+
+    <h4>The Flat Earth Model</h4>
+    <p>Flat Earth theorists propose a different model: the Earth is a flat, stationary plane. According to this model, the North Pole is at the center, and a massive ice wall, known as Antarctica, surrounds the edges. This ice wall prevents us from falling off the edge and is heavily guarded by international forces to keep the truth hidden from the public.</p>
+
+    <h4>Evidence Supporting the Flat Earth Theory</h4>
+    <p><strong>Visual Observation:</strong> When we look at the horizon, it always appears flat, regardless of our altitude. From mountain peaks to airplane windows, the horizon remains level and uncurved.</p>
+    <p><strong>Water's Natural Level:</strong> Water always finds its level. If the Earth were a sphere, bodies of water would curve around it. However, we observe that lakes, oceans, and rivers maintain a flat surface.</p>
+    <p><strong>No Detectable Curvature:</strong> Despite extensive surveys and measurements, no significant curvature has been detected over large bodies of water or vast stretches of land. The curvature formula (8 inches per mile squared) should show noticeable bends, yet it doesn’t.</p>
+    <p><strong>The Bedford Level Experiment:</strong> Conducted in the 19th century, this series of experiments demonstrated that over a six-mile stretch of water, no curvature was detected, supporting the flat Earth theory.</p>
+
+    <h4>The Space Program Deception</h4>
+    <p>One of the most compelling arguments for the flat Earth theory is the assertion that space agencies, particularly NASA, are perpetuating a massive fraud. Critics argue that:</p>
+    <p><strong>Fake Photos and Videos:</strong> Images and videos of Earth from space are often cited as proof of a spherical Earth. However, flat Earth proponents argue that these are manipulated, using CGI and other technologies to deceive the public.</p>
+    <p><strong>Astronaut Testimonies:</strong> Numerous inconsistencies and anomalies in astronauts' testimonies and behavior raise questions about the authenticity of their claims and experiences.</p>
+
+    <h4>The Motive Behind the Deception</h4>
+    <p>Why would governments and space agencies lie about the shape of the Earth? Flat Earth theorists suggest several motives:</p>
+    <p><strong>Control and Power:</strong> Maintaining the globe Earth narrative allows for greater control over the population, ensuring that people are more compliant and less likely to question other aspects of their reality.</p>
+    <p><strong>Financial Gain:</strong> The space industry is a multi-billion-dollar enterprise. By perpetuating the myth of space travel and exploration, enormous sums of money are funneled into this lucrative industry.</p>
+    <p><strong>Hiding the Truth:</strong> There may be unknown lands or resources beyond the Antarctic ice wall that powerful entities wish to keep secret from the general population.</p>
+
+    <h4>Conclusion</h4>
+    <p>The flat Earth theory challenges one of the most fundamental beliefs of modern science. While the mainstream media and academic institutions vehemently defend the globe model, it's essential to remain open-minded and question the narratives presented to us. The evidence supporting a flat Earth is compelling and deserves thorough investigation. By exploring alternative viewpoints and seeking the truth, we can uncover the greatest cover-up in history and reshape our understanding of the world we inhabit.</p>
           <h6>
             And for the ultimate proof, here’s NASA admitting that the Earth is
             flat.
@@ -74,16 +66,8 @@
               >NASA admitting</a
             >
           </div>
-          <img src="realImageOfEarth.jpg" />
-          <h6>
-            Real image of the turtle below the Flat Earth. Real hidden photo
-            from NASA.
-          </h6>
-          <form
-            action="https://medium.com/@thisscience1/a-mathematical-proof-for-flat-earth-18f5be91741d"
-          >
-            <input id="flatEarthCitation" type="submit" value="Citation" />
-          </form>
+          <img src="realImageOfEarth.jpg" alt="Real image of the turtle below the Flat Earth. Real hidden photo
+            from NASA." />
         </div>
       </div>
     </div>
